@@ -141,6 +141,8 @@ $wgMessageStructure = array(
 		'category-file-count',
 		'category-file-count-limited',
 		'listingcontinuesabbrev',
+		'index-category',
+		'noindex-category',
 	),
 	'mainpage' => array(
 		'linkprefix',
