@@ -238,6 +238,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * A new permission, 'root', is created.  Analogous to root users on Unix systems,
   the root permission effectively grants all other permissions on a wiki.  Useful
   for debugging and administration.
+* (bug 16979) Tracking categories for __INDEX__ and __NOINDEX__
 
 === Bug fixes in 1.16 ===
 
